# ai-core

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/kanoo_ai_core/: __init__.py  server.py
src/kanoo_ai_core/guardrails/: __init__.py  pdpl.py
src/kanoo_ai_core/providers/: __init__.py  anthropic.py
tests/: conftest.py  test_guardrails.py  test_providers_anthropic.py  test_streaming.py
tests/fixtures/: pii_canonical.json
