[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kanoo-ai-core"
version = "0.2.0"
description = "Kanoo Elite AI abstraction package — PDPL-guardrailed LLM provider abstraction."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Kanoo Elite Platform Team" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Private :: Do Not Upload",
]
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "anthropic>=0.34,<1",
    "pydantic>=2.6,<3",
    "structlog>=24.1,<26",
    "google-cloud-secret-manager>=2.20,<3",
    "kanoo-shared-libs @ git+https://github.com/Kanoo-Elite/shared-libs.git@v0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "httpx>=0.27",
    "ruff>=0.5",
]

[project.urls]
Repository = "https://github.com/Kanoo-Elite/ai-core"
"Decision record" = "https://github.com/Kanoo-Elite/kairos-platform/blob/main/decisions-pending.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
